# lamai

./: .gitignore  CMakeLists.txt  Makefile  README.md  lamai.c  lamai.cpp  test.bc  test.lama
.github/workflows/: test.yml
performance/: Makefile  Sort.sm
regression/: Makefile
regression/deep-expressions/: Makefile
regression/expressions/: Makefile
runtime/: runtime.c  runtime.h
